--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/binRick/vzctl-json-description#readme",
   "dependencies": {
     "async": "^2.4.0",
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "commander": "^2.9.0"
   }
 }
